Require Node.js 8

--- a/LinearRegression.ipynb
+++ b/LinearRegression.ipynb
@@ -653,3 +653,31 @@
     "    stored_feature_stds.append(np.std(Xnorm[:, icol]))\n",
     "    # Skip the first column\n",
     "    if not icol:\n",
+    "        continue\n",
+    "    # Faster to not recompute the mean and std again, just used stored values\n",
+    "    Xnorm[:, icol] = # YOUR CODE HERE"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "#Quick visualize the feature-normalized data\n",
+    "plt.grid(True)\n",
+    "plt.xlim([-5, 5])\n",
+    "plt.hist(Xnorm[:, 0], label='col1')\n",
+    "plt.hist(Xnorm[:, 1], label='col2')\n",
+    "plt.hist(Xnorm[:, 2], label='col3')\n",
+    "plt.title('Feature Normalization Accomplished')\n",
+    "plt.xlabel('Column Value')\n",
+    "plt.ylabel('Counts')\n",
+    "plt.legend()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
