hrtimer: Consider preemption when migrating hrtimer cpu_bases

--- a/LinearRegression.ipynb
+++ b/LinearRegression.ipynb
@@ -681,3 +681,37 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "Previously, you implemented gradient descent on a univariate regression\n",
+    "problem. The only difference now is that there is one more feature in the\n",
+    "matrix X. The hypothesis function and the batch gradient descent update\n",
+    "rule remain unchanged."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true,
+    "scrolled": false
+   },
+   "outputs": [],
+   "source": [
+    "#Run gradient descent with multiple variables, initial theta still set to zeros\n",
+    "#(Note! This doesn't work unless we feature normalize! \"overflow encountered in multiply\")\n",
+    "initial_theta = np.zeros((Xnorm.shape[1], 1))\n",
+    "theta, theta_history, cost_history = descendGradient(Xnorm, y, initial_theta)\n",
+    "\n",
+    "#Plot convergence of cost function:\n",
+    "plotConvergence(cost_history)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "When training Machine Learning models, **it is essential to have a test set that the model does not see in the training process**. That is because we cannot assess model performance from the data that was used to train it -- any such assessment would be misleadingly optimistic, i.e. the model would appear more accurate that it actually would be when the time arrives to predict on unseen data!\n",
+    "\n",
+    "We say that only unseen, or *test data*, can provide an unbiased model performance metric, such as accuracy."
+   ]
+  },
