--- a/LinearRegression.ipynb
+++ b/LinearRegression.ipynb
@@ -715,3 +715,35 @@
     "We say that only unseen, or *test data*, can provide an unbiased model performance metric, such as accuracy."
    ]
   },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "When normalizing the features, it is important\n",
+    "to store the values used for normalization - the mean value and the standard\n",
+    "deviation used for the computations. After learning the parameters\n",
+    "from the model, we often want to predict the prices of houses we have not\n",
+    "seen before (i.e. the test data). Given a new x value (living room area and number of bedrooms),\n",
+    "we must first normalize x using the mean and standard deviation\n",
+    "*that we had previously computed from the training set*."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "#print(\"Final result theta parameters: \\n\",theta)\n",
+    "print(\"Check of result: What is price of house with 1650 square feet and 3 bedrooms?\")\n",
+    "ytest = np.array([1650., 3.])\n",
+    "\n",
+    "\n",
+    "# To \"undo\" feature normalization, we \"undo\" 1650 and 3, then plug it into our hypothesis\n",
+    "ytest_scaled = [(ytest[x] - stored_feature_means[x + 1]) /\n",
+    "               stored_feature_stds[x + 1] for x in range(len(ytest))]\n",
+    "ytest_scaled.insert(0, 1)\n",
+    "print(\"$%0.2f\" % float(h(theta, ytest_scaled)))"
+   ]
