app-admin/ansible: Cleaning old version(s)

--- a/LinearRegression.ipynb
+++ b/LinearRegression.ipynb
@@ -747,3 +747,35 @@
     "ytest_scaled.insert(0, 1)\n",
     "print(\"$%0.2f\" % float(h(theta, ytest_scaled)))"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Extra: Normal equations\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "As mentioned above, linear regression is one of the few ML models whose parameters can be solved for exactly, meaning that we can avoid an iterative procedure such as gradient descent. Formally, we say that a linear regression has a closed-form solution.\n",
+    "\n",
+    "Let's return to matrix notation. We shall use matrix differentiation but do not worry if you do not understand some of the below - this is simply bonus material and can be equivalently derived without linear algebra.\n",
+    "\n",
+    "$$ H =\n",
+    "    \\begin{bmatrix}\n",
+    "        h_{\\theta}(x^{(1)}) \\\\\n",
+    "        h_{\\theta}(x^{(2)}) \\\\\n",
+    "        \\vdots \\\\\n",
+    "        h_{\\theta}(x^{(m)})\n",
+    "    \\end{bmatrix} = X\\theta $$\n",
+    "\n",
+    "$$ J(\\theta) = \\frac{1}{2m}(y - X\\theta)^T(y - X\\theta) $$\n",
+    "\n",
+    "$$ \\frac{dJ}{d\\theta} = \\frac{1}{m}(X^Ty -  X^TX\\theta) $$\n",
+    "\n",
+    "A global minimum for a convex function is a solution to $\\frac{dJ}{d\\theta} = 0$ or: \n",
+    "\n",
+    "$$ X^Ty - X^TX\\theta = 0 $$\n",
+    "\n",
