--- a/LinearRegression.ipynb
+++ b/LinearRegression.ipynb
@@ -779,3 +779,36 @@
     "\n",
     "$$ X^Ty - X^TX\\theta = 0 $$\n",
     "\n",
+    "$$ \\theta = (X^TX)^{-1}X^Ty $$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "from numpy.linalg import inv\n",
+    "# Implementation of normal equation to find analytic solution to linear regression\n",
+    "\n",
+    "def normEqtn(X, y):\n",
+    "    theta = # YOUR CODE HERE\n",
+    "    return theta"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "print(\"Normal equation prediction for price of house with 1650 square feet and 3 bedrooms\")\n",
+    "print(\"$%0.2f\" % float(h(normEqtn(X, y), [1, 1650., 3])))"
+   ]
+  },
+  {
+   "cell_type": "code",
