--- a/LinearRegressionAnswers.ipynb
+++ b/LinearRegressionAnswers.ipynb
@@ -64,3 +64,35 @@
     "In general linear regression is not the most predictive model out of the box. Nonetheless, it is a very useful baseline in many contexts (and in industry) and benefits from the ease of interpretation and development."
    ]
   },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 1 Linear regression with one variable"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's start with a simple linear regression model in one variable. You will implement linear regression with one\n",
+    "variable to predict profits for a food truck. \n",
+    "\n",
+    "Suppose you are the CEO of a restaurant franchise and are considering different cities for opening a new outlet.\n",
+    "The chain already has trucks in various cities and you have a dataset containing the profits and population size for $m$ cities.\n",
+    "The training data can be represented as $\\{(x^{(1)}, y^{(1)}), (x^{(2)}, y^{(2)}), \\dotsc, (x^{(m)}, y^{(m)})\\}$ where $x^{(i)}$ represents the population (in 10k increment) and $y^{(i)}$ represents profit (in \\$10k increment) of the $i$th city.\n",
+    "\n",
+    "You would like to use this data to help you select which city to expand to next.\n",
+    "\n",
+    "The file *ex1data1.txt* contains the dataset for our linear regression problem. The first column is the population of a city and the second column is the profit of a food truck in that city. A negative value for profit indicates a\n",
+    "loss.\n",
+    "\n",
+    "\n",
+    "Consider output of the hypothesis $h_{\\theta}$\n",
+    "\n",
+    "$$ h_{\\theta}(x) = \\theta_0 + \\theta_1 x. $$\n",
+    "\n",
+    "\n",
+    "Let's try to interpret this equation. It assumes that the relationship between $y$ and $x$ is linear -- meaning that if we increase $x$ by 1, $h_{\\theta}(x)$ will increase by $\\theta_1$ and if we increase $x$ by $47.1$, $h_{\\theta}(x)$ will increase $47.1 \\cdot \\theta_1$, or $47.1$ times $\\theta_1$. The term $\\theta_0$ allows to shift the linear dependency between $h_{\\theta}(x)$ and $x$ by a constant. When $x = 0$, $h_{\\theta}(x)$ predicts $y$ to be exactly equal to $\\theta_0$."
+   ]
+  },
