--- a/LinearRegressionAnswers.ipynb
+++ b/LinearRegressionAnswers.ipynb
@@ -138,3 +138,41 @@
    "metadata": {
     "collapsed": true
    },
+   "outputs": [],
+   "source": [
+    "datafile = 'data/ex1data1.txt'\n",
+    "cols = np.loadtxt(datafile, delimiter=',', usecols=(\n",
+    "    0, 1), unpack=True)  # Read in comma separated data\n",
+    "\n",
+    "# Form the usual \"X\" matrix and \"y\" vector\n",
+    "X = np.transpose(np.array(cols[:-1]))\n",
+    "y = np.transpose(np.array(cols[-1:]))\n",
+    "m = y.size  # number of training examples"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 1.2 Plotting the Data\n",
+    "\n",
+    "Before starting on any task, it is often useful to understand the data by visualizing it. For this dataset, you can use a scatter plot to visualize the data, since it has only two properties to plot (profit and population).\n",
+    "\n",
+    "We focus on the inner workings of machine learning algorithms and therefore you do not need to fill in anything for plotting and model diagnostics. Simply execute the cells with matplotlib code to see what you have achieved so far!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Text(0.5,0,'Population of City in 10,000s')"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
