fixed typo in comment

--- a/LinearRegressionAnswers.ipynb
+++ b/LinearRegressionAnswers.ipynb
@@ -200,3 +200,30 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### 1.3 Gradient Descent"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Linear regression assumes that we can predict $y$ using a linear model (using matrix notation):\n",
+    "\n",
+    "$$ h_{\\theta}(x) = \\theta^Tx $$\n",
+    "\n",
+    "\n",
+    "This is just a much more concise way to write:\n",
+    "\n",
+    "$$ h_{\\theta}(x) = \\theta_1 x_1 + \\theta_2 x_2 + ... \\theta_n x_n$$\n",
+    "\n",
+    "---\n",
+    "#### Aside: Adding a Column of Ones to $X$ and the Expressing the Hypothesis Function in Vector Form\n",
+    "\n",
+    "(Ask us for help if anything is unclear.)\n",
+    "\n",
+    "How can we write the linear hypothesis in matrix form?\n",
+    "\n",
+    "$$ h_{\\theta}(x) = \\theta_0 + \\theta_1 x_1 + \\cdots + \\theta_n x_n. $$\n",
+    "\n",
+    "Recall that we can compactly write a set of linear equations as a matrix multiplication. For example\n",
+    "\\begin{align}\n",
