--- a/LinearRegressionAnswers.ipynb
+++ b/LinearRegressionAnswers.ipynb
@@ -227,3 +227,21 @@
     "\n",
     "Recall that we can compactly write a set of linear equations as a matrix multiplication. For example\n",
     "\\begin{align}\n",
+    "    \\begin{bmatrix}\n",
+    "        a & b \\\\\n",
+    "        c & d\n",
+    "    \\end{bmatrix}\n",
+    "    \\begin{bmatrix}\n",
+    "        e & f \\\\\n",
+    "        g & h\n",
+    "    \\end{bmatrix} &=\n",
+    "    \\begin{bmatrix}\n",
+    "        ae + bg & af + bh \\\\\n",
+    "        ce + dg & cf + dh\n",
+    "    \\end{bmatrix} \\\\\n",
+    "    \\begin{bmatrix}\n",
+    "        i & j \\\\\n",
+    "        k & l\n",
+    "    \\end{bmatrix}\n",
+    "    \\begin{bmatrix}\n",
+    "        m \\\\\n",
