--- a/LinearRegressionAnswers.ipynb
+++ b/LinearRegressionAnswers.ipynb
@@ -245,3 +245,27 @@
     "    \\end{bmatrix}\n",
     "    \\begin{bmatrix}\n",
     "        m \\\\\n",
+    "        n\n",
+    "    \\end{bmatrix} &=\n",
+    "    \\begin{bmatrix}\n",
+    "        im + jn \\\\\n",
+    "        km + ln\n",
+    "    \\end{bmatrix}\\\\\n",
+    "    \\begin{bmatrix}\n",
+    "        o & p\n",
+    "    \\end{bmatrix}\n",
+    "    \\begin{bmatrix}\n",
+    "        q \\\\\n",
+    "        r\n",
+    "    \\end{bmatrix} &=\n",
+    "    \\begin{bmatrix}\n",
+    "        oq + pr\n",
+    "    \\end{bmatrix}\n",
+    "\\end{align}\n",
+    "\n",
+    "With this in mind, we can write the linear hypothesis as following:\n",
+    "\\begin{align}\n",
+    "    h_{\\theta}(x) = \\theta_0 + \\theta_1 x_1 + \\cdots + \\theta_n x_n =\n",
+    "    \\begin{bmatrix}\n",
+    "        \\theta_0 & \\theta_1 & \\cdots & \\theta_n\n",
+    "    \\end{bmatrix}\n",
