x32: Use compat shims for {g,s}etsockopt

--- a/LinearRegressionAnswers.ipynb
+++ b/LinearRegressionAnswers.ipynb
@@ -424,3 +424,30 @@
     "    $$(\\theta_k)_t = (\\theta_k)_{t-1} - \\alpha  \\frac{1}{m}\\sum_{i = 1}^m x_k^{(i)}\\left(h_{\\theta}(x^{(i)}) - y^{(i)}\\right) $$\n",
     "5. end"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "\n",
+    "#Actual gradient descent minimizing routine\n",
+    "def descendGradient(X, y, theta_start=np.zeros(2)):\n",
+    "    \"\"\"\n",
+    "    theta_start is an n- dimensional vector of initial theta guess\n",
+    "    X is matrix with n- columns and m- rows\n",
+    "    \"\"\"\n",
+    "    theta = theta_start\n",
+    "    \n",
+    "    # Store costs over GD iterations to plot them later!\n",
+    "    cost_history = []  \n",
+    "    \n",
+    "    # Store parameters over GD iterations to visualize how they change later\n",
+    "    theta_history = []\n",
+    "    for _ in range(iterations):\n",
+    "        theta_new = theta\n",
+    "        cost_history.append(computeCost(theta, X, y))\n",
+    "\n",
