--- a/LinearRegressionAnswers.ipynb
+++ b/LinearRegressionAnswers.ipynb
@@ -484,3 +484,41 @@
       "text/plain": [
        "<matplotlib.figure.Figure at 0x108a5a390>"
       ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# Actually run gradient descent to get the best-fit theta values\n",
+    "initial_theta = np.zeros((X.shape[1], 1))\n",
+    "theta, theta_history, cost_history = descendGradient(X, y, initial_theta)\n",
+    "\n",
+    "# Plot the convergence of the cost function\n",
+    "def plotConvergence(cost_history):\n",
+    "    plt.figure(figsize=(10, 6))\n",
+    "    plt.plot(range(len(cost_history)), cost_history, 'bo')\n",
+    "    plt.grid(True)\n",
+    "    plt.title(\"Convergence of Cost Function\")\n",
+    "    plt.xlabel(\"Iteration number\")\n",
+    "    plt.ylabel(\"Cost function\")\n",
+    "    plt.xlim([-0.05 * iterations, 1.05 * iterations])\n",
+    "\n",
+    "plotConvergence(cost_history)\n",
+    "plt.ylim([4, 7])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Looks like at every iteration we are improving our model! That is because the cost function $J$ defined above is strictly convex and with a unique global minimum. Consequently, every iteration, provided our step size $a$ is not too large, will lead to a decrease in the cost as we improve our parameters (weights). \n",
+    "\n",
+    "As an aside, many ML models that you may encounter in the future do not have convex cost functions with a unique global minimum, so in general you should not expect to see the same plot as above in all circumstances."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
