--- a/LinearRegressionAnswers.ipynb
+++ b/LinearRegressionAnswers.ipynb
@@ -554,3 +554,33 @@
     "plt.plot(X[:, 1], fit(X[:, 1]), 'b-',\n",
     "         label='Hypothesis: h(x) = %0.2f + %0.2fx' % (theta[0], theta[1]))\n",
     "plt.grid(True)  # Always plot.grid true!\n",
+    "plt.ylabel('Profit in $10,000s')\n",
+    "plt.xlabel('Population of City in 10,000s')\n",
+    "plt.legend()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 2.5 Visualizing _J($\\theta$)_"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "As you perform gradient descent to learn minimize the cost function $J(\\theta)$,\n",
+    "it is helpful to monitor the convergence by computing the cost. In this\n",
+    "section, you will implement a function to calculate $J(\\theta)$ so you can check the\n",
+    "convergence of your gradient descent implementation.\n",
+    "\n",
+    "To understand the cost function $J(\\theta)$ better, you will now plot the cost over\n",
+    "a 2-dimensional grid of $\\theta_0$ and $\\theta_1$ values. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {
+    "scrolled": false
