--- a/LinearRegressionAnswers.ipynb
+++ b/LinearRegressionAnswers.ipynb
@@ -616,3 +616,34 @@
     "        myzs.append(computeCost(np.array([[i], [j]]), X, y))\n",
     "\n",
     "scat = ax.scatter(myxs, myys, myzs, c=np.abs(myzs),\n",
+    "                  cmap=plt.get_cmap('YlOrRd'))\n",
+    "\n",
+    "plt.xlabel(r'$\\theta_0$', fontsize=30)\n",
+    "plt.ylabel(r'$\\theta_1$', fontsize=30)\n",
+    "plt.title('Cost (Minimization Path Shown in Blue)', fontsize=30)\n",
+    "plt.plot([x[0] for x in theta_history], [x[1]\n",
+    "                                        for x in theta_history], cost_history, 'bo-')\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 3. EXTRA: Linear Regression with multiple variables"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Linear regression with multiple variables is a straightforward extension of everything we have done up until now.\n",
+    "\n",
+    "The target now becomes a linear function of several variables, each of which will need to be updated by gradient descent -- but in the same manner as for a single variable regression.\n",
+    "\n",
+    "$$ h_{\\theta}(x) = \\theta_0 + \\theta_1 x_1 + \\cdots + \\theta_n x_n $$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
