--- a/LinearRegressionAnswers.ipynb
+++ b/LinearRegressionAnswers.ipynb
@@ -647,3 +647,26 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "In this part, you will implement linear regression with multiple variables to\n",
+    "predict the prices of houses. Suppose you are selling your house and you\n",
+    "want to know what a good market price would be. One way to do this is to\n",
+    "first collect information on recent houses sold and make a model of housing\n",
+    "prices.\n",
+    "\n",
+    "\n",
+    "The file ex1data2.txt contains a training set of housing prices in Portland,\n",
+    "Oregon. The first column is the size of the house (in square feet), the\n",
+    "second column is the number of bedrooms, and the third column is the price\n",
+    "of the house."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "datafile = 'data/ex1data2.txt'\n",
