Setting version to 0.4.2-SNAPSHOT

--- a/LinearRegressionAnswers.ipynb
+++ b/LinearRegressionAnswers.ipynb
@@ -788,3 +788,29 @@
     }
    ],
    "source": [
+    "#Quick visualize the feature-normalized data\n",
+    "plt.grid(True)\n",
+    "plt.xlim([-5, 5])\n",
+    "plt.hist(Xnorm[:, 0], label='col1')\n",
+    "plt.hist(Xnorm[:, 1], label='col2')\n",
+    "plt.hist(Xnorm[:, 2], label='col3')\n",
+    "plt.title('Feature Normalization Accomplished')\n",
+    "plt.xlabel('Column Value')\n",
+    "plt.ylabel('Counts')\n",
+    "plt.legend()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Previously, you implemented gradient descent on a univariate regression\n",
+    "problem. The only difference now is that there is one more feature in the\n",
+    "matrix X. The hypothesis function and the batch gradient descent update\n",
+    "rule remain unchanged."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {
