--- a/LinearRegressionAnswers.ipynb
+++ b/LinearRegressionAnswers.ipynb
@@ -842,3 +842,35 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "When training Machine Learning models, **it is essential to have a test set that the model does not see in the training process**. That is because we cannot assess model performance from the data that was used to train it -- any such assessment would be misleadingly optimistic, i.e. the model would appear more accurate that it actually would be when the time arrives to predict on unseen data!\n",
+    "\n",
+    "We say that only unseen, or *test data*, can provide an unbiased model performance metric, such as accuracy."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "When normalizing the features, it is important\n",
+    "to store the values used for normalization - the mean value and the standard\n",
+    "deviation used for the computations. After learning the parameters\n",
+    "from the model, we often want to predict the prices of houses we have not\n",
+    "seen before (i.e. the test data). Given a new x value (living room area and number of bedrooms),\n",
+    "we must first normalize x using the mean and standard deviation\n",
+    "*that we had previously computed from the training set*."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Check of result: What is price of house with 1650 square feet and 3 bedrooms?\n",
+      "$293098.15\n"
+     ]
+    }
+   ],
