--- a/LinearRegressionAnswers.ipynb
+++ b/LinearRegressionAnswers.ipynb
@@ -904,3 +904,32 @@
     "\n",
     "$$ H =\n",
     "    \\begin{bmatrix}\n",
+    "        h_{\\theta}(x^{(1)}) \\\\\n",
+    "        h_{\\theta}(x^{(2)}) \\\\\n",
+    "        \\vdots \\\\\n",
+    "        h_{\\theta}(x^{(m)})\n",
+    "    \\end{bmatrix} = X\\theta $$\n",
+    "\n",
+    "$$ J(\\theta) = \\frac{1}{2m}(y - X\\theta)^T(y - X\\theta) $$\n",
+    "\n",
+    "$$ \\frac{dJ}{d\\theta} = \\frac{1}{m}(X^Ty -  X^TX\\theta) $$\n",
+    "\n",
+    "A global minimum for a convex function is a solution to $\\frac{dJ}{d\\theta} = 0$ or: \n",
+    "\n",
+    "$$ X^Ty - X^TX\\theta = 0 $$\n",
+    "\n",
+    "$$ \\theta = (X^TX)^{-1}X^Ty $$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "from numpy.linalg import inv\n",
+    "# Implementation of normal equation to find analytic solution to linear regression\n",
+    "\n",
+    "def normEqtn(X, y):\n",
