--- a/LinearRegressionAnswers.ipynb
+++ b/LinearRegressionAnswers.ipynb
@@ -933,3 +933,28 @@
     "# Implementation of normal equation to find analytic solution to linear regression\n",
     "\n",
     "def normEqtn(X, y):\n",
+    "    #restheta = np.zeros((X.shape[1],1))\n",
+    "    #np.dot(np.dot(inv(np.dot(X.T, X)), X.T), y)\n",
+    "    return inv(X.T @ X) @ X.T @ y"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Normal equation prediction for price of house with 1650 square feet and 3 bedrooms\n",
+      "$293081.46\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Normal equation prediction for price of house with 1650 square feet and 3 bedrooms\")\n",
+    "print(\"$%0.2f\" % float(h(normEqtn(X, y), [1, 1650., 3])))"
+   ]
+  },
+  {
