--- a/LinearRegressionHard.ipynb
+++ b/LinearRegressionHard.ipynb
@@ -107,3 +107,36 @@
     "    X &=\n",
     "        \\begin{bmatrix}\n",
     "            x_1^{(1)} & x_2^{(1)} & \\cdots & x_n^{(1)} \\\\\n",
+    "            x_1^{(2)} & x_2^{(2)} & \\cdots & x_n^{(2)} \\\\\n",
+    "            \\vdots & \\vdots & \\ddots & \\vdots \\\\\n",
+    "            x_1^{(m)} & x_2^{(m)} & \\cdots & x_n^{(m)} \\\\\n",
+    "        \\end{bmatrix} &&\\text{and}\\\\\n",
+    "    y &= \n",
+    "        \\begin{bmatrix}\n",
+    "            y^{(1)} \\\\\n",
+    "            y^{(2)} \\\\\n",
+    "            \\vdots \\\\\n",
+    "            y^{(m)}\n",
+    "        \\end{bmatrix}.\n",
+    "\\end{align}\n",
+    "\n",
+    "In the one dimensional case the matrix $X$ is just\n",
+    "\\begin{align}\n",
+    "    X &=\n",
+    "        \\begin{bmatrix}\n",
+    "            x^{(1)} \\\\\n",
+    "            x^{(2)} \\\\\n",
+    "            \\vdots \\\\\n",
+    "            x^{(m)}\n",
+    "        \\end{bmatrix}.\n",
+    "\\end{align}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
