Input: I8042 - add Acer Aspire 7738 to the nomux list

--- a/LinearRegressionHard.ipynb
+++ b/LinearRegressionHard.ipynb
@@ -171,3 +171,27 @@
    "source": [
     "# Plot the data to see what it looks like\n",
     "plt.figure(figsize=(10, 6))\n",
+    "plt.plot(X[:, 0], y[:, 0], 'rx', markersize=10)\n",
+    "plt.grid(True)\n",
+    "plt.ylabel('Profit in $10,000s')\n",
+    "plt.xlabel('Population of City in 10,000s')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 1.3 Gradient Descent"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Linear regression assumes that we can predict $y$ using a linear model (using matrix notation):\n",
+    "\n",
+    "$$ h_{\\theta}(x) = \\theta^Tx $$\n",
+    "\n",
+    "\n",
+    "This is just a much more concise way to write:\n",
+    "\n",
