--- a/LinearRegressionHard.ipynb
+++ b/LinearRegressionHard.ipynb
@@ -288,3 +288,38 @@
     "    \\begin{bmatrix}\n",
     "        \\theta_0 + \\theta_1 x_1^{(1)} + \\cdots + \\theta_n x_n^{(1)} \\\\\n",
     "        \\theta_0 + \\theta_1 x_1^{(2)} + \\cdots + \\theta_n x_n^{(2)} \\\\\n",
+    "        \\vdots \\\\\n",
+    "        \\theta_0 + \\theta_1 x_1^{(m)} + \\cdots + \\theta_n x_n^{(m)} \\\\\n",
+    "    \\end{bmatrix} =\n",
+    "    \\begin{bmatrix}\n",
+    "        1 & x_1^{(1)} & \\cdots & x_n^{(1)} \\\\\n",
+    "        1 & x_1^{(2)} & \\cdots & x_n^{(2)} \\\\\n",
+    "        \\vdots & \\vdots & \\ddots & \\vdots \\\\\n",
+    "        1 & x_1^{(m)} & \\cdots & x_n^{(m)}\n",
+    "    \\end{bmatrix}\n",
+    "    \\begin{bmatrix}\n",
+    "        \\theta_0 \\\\\n",
+    "        \\theta_1 \\\\\n",
+    "        \\vdots \\\\\n",
+    "        \\theta_n\n",
+    "    \\end{bmatrix} =\n",
+    "    X\\theta\n",
+    "\\end{align}\n",
+    "In the case of linear regression with a single variable, $X$ will have $ n + 1 = 2$ columns.\n",
+    "\n",
+    "For convenience, we will consider $n$ to be the number of columns of $X$ with the ones added."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "X = np.insert(X, 0, 1, axis=1)\n",
+    "m, n = X.shape"
+   ]
+  },
+  {
