--- a/LinearRegressionHard.ipynb
+++ b/LinearRegressionHard.ipynb
@@ -358,3 +358,36 @@
     "collapsed": true
    },
    "outputs": [],
+   "source": [
+    "def h(theta, X):  # Linear hypothesis function\n",
+    "    # YOUR CODE HERE\n",
+    "\n",
+    "\n",
+    "def computeCost(theta, X, y):  # Cost function\n",
+    "    \"\"\"\n",
+    "    theta_start is an n- dimensional vector of initial theta guess\n",
+    "    X is matrix with n- columns and m- rows\n",
+    "    y is a matrix with m- rows and 1 column\n",
+    "    \"\"\"\n",
+    "    # YOUR CODE HERE\n",
+    "\n",
+    "#Test that running computeCost with 0's as theta returns 32.07:\n",
+    "\n",
+    "initial_theta = np.zeros((X.shape[1], 1)) #(theta is a vector with n rows and 1 columns (if X has n features) )\n",
+    "print(computeCost(initial_theta, X, y))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Gradient descent is an iterative procedure where we update parameters in the direction of steepest descent (i.e. the direction that will reduce the cost function the most). How much we wish to move in that direction is controlled by a step size parameter $\\alpha$. Hence, the formula is:\n",
+    "\n",
+    "$$ \\theta_{t+1} = \\theta_t - \\alpha  \\frac{dJ}{d\\theta} $$\n",
+    "\n",
+    "The gradient for the cost function can be obtained by differentiating $J$ and is equal to:\n",
+    "\n",
+    "$$ \\frac{dJ}{d\\theta_k} = \\frac{1}{m}\\sum_{i = 1}^m x_k^{(i)}\\left(h_{\\theta}(x^{(i)}) - y^{(i)}\\right) $$\n",
+    "\n",
+    "In pseudocode, we can therefore write the gradient descent algorithm as following:\n",
+    "\n",
