Start of documentation

--- a/LinearRegressionHard.ipynb
+++ b/LinearRegressionHard.ipynb
@@ -391,3 +391,46 @@
     "\n",
     "In pseudocode, we can therefore write the gradient descent algorithm as following:\n",
     "\n",
+    "1. for t iterations do:\n",
+    "    $$(\\theta_k)_t = (\\theta_k)_{t-1} - \\alpha  \\frac{1}{m}\\sum_{i = 1}^m x_k^{(i)}\\left(h_{\\theta}(x^{(i)}) - y^{(i)}\\right) $$\n",
+    "5. end"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "#Actual gradient descent minimizing routine\n",
+    "def descendGradient(X, y, theta_start=np.zeros(2)):\n",
+    "    \"\"\"\n",
+    "    theta_start is an n- dimensional vector of initial theta guess\n",
+    "    X is matrix with n- columns and m- rows\n",
+    "    \"\"\"\n",
+    "    theta_history = [] # store thetas\n",
+    "    cost_history = [] # store costs\n",
+    "    \n",
+    "    # YOUR CODE HERE\n",
+    "    \n",
+    "    return theta, theta_history, cost_history"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true,
+    "scrolled": false
+   },
+   "outputs": [],
+   "source": [
+    "# Actually run gradient descent to get the best-fit theta values\n",
+    "initial_theta = np.zeros((X.shape[1], 1))\n",
+    "theta, theta_history, cost_history = descendGradient(X, y, initial_theta)\n",
+    "\n",
+    "# Plot the convergence of the cost function\n",
+    "def plotConvergence(cost_history):\n",
+    "    plt.figure(figsize=(10, 6))\n",
