fs: fuse: Add replacment for CMA pages into the LRU cache

--- a/LinearRegressionHard.ipynb
+++ b/LinearRegressionHard.ipynb
@@ -434,3 +434,33 @@
     "# Plot the convergence of the cost function\n",
     "def plotConvergence(cost_history):\n",
     "    plt.figure(figsize=(10, 6))\n",
+    "    plt.plot(range(len(cost_history)), cost_history, 'bo')\n",
+    "    plt.grid(True)\n",
+    "    plt.title(\"Convergence of Cost Function\")\n",
+    "    plt.xlabel(\"Iteration number\")\n",
+    "    plt.ylabel(\"Cost function\")\n",
+    "    plt.xlim([-0.05 * iterations, 1.05 * iterations])\n",
+    "\n",
+    "plotConvergence(cost_history)\n",
+    "plt.ylim([4, 7])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Looks like at every iteration we are improving our model! That is because the cost function $J$ defined above is strictly convex and with a unique global minimum. Consequently, every iteration, provided our step size $a$ is not too large, will lead to a decrease in the cost as we improve our parameters (weights). \n",
+    "\n",
+    "As an aside, many ML models that you may encounter in the future do not have convex cost functions with a unique global minimum, so in general you should not expect to see the same plot as above in all circumstances."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "#Plot the line on top of the data to ensure it looks correct\n",
+    "def fit(xval):\n",
