--- a/LinearRegressionHard.ipynb
+++ b/LinearRegressionHard.ipynb
@@ -532,3 +532,26 @@
     "plt.plot([x[0] for x in theta_history], [x[1]\n",
     "                                        for x in theta_history], cost_history, 'bo-')\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 3. EXTRA: Linear Regression with multiple variables"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Linear regression with multiple variables is a straightforward extension of everything we have done up until now.\n",
+    "\n",
+    "The target now becomes a linear function of several variables, each of which will need to be updated by gradient descent -- but in the same manner as for a single variable regression.\n",
+    "\n",
+    "$$ h_{\\theta}(x) = \\theta_0 + \\theta_1 x_1 + \\cdots + \\theta_n x_n $$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
