Pontoon: Update English (Great Britain) (en-GB) localization of AMO

--- a/LinearRegressionHard.ipynb
+++ b/LinearRegressionHard.ipynb
@@ -590,3 +590,33 @@
     "# Insert the usual column of 1's into the \"X\" matrix\n",
     "X = # YOUR CODE HERE"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# Quick visualize data\n",
+    "plt.grid(True)\n",
+    "plt.xlim([-100, 5000])\n",
+    "plt.hist(X[:, 0], label='col1')\n",
+    "plt.hist(X[:, 1], label='col2')\n",
+    "plt.hist(X[:, 2], label='col3')\n",
+    "plt.title('Clearly we need feature normalization.')\n",
+    "plt.xlabel('Column Value')\n",
+    "plt.ylabel('Counts')\n",
+    "plt.legend()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "By looking at the values, note that house sizes are about\n",
+    "1000 times the number of bedrooms. When features differ by orders of magnitude,\n",
+    "first performing feature scaling can make gradient descent converge\n",
+    "much more quickly.\n",
+    "\n",
