--- a/LinearRegressionHard.ipynb
+++ b/LinearRegressionHard.ipynb
@@ -649,3 +649,33 @@
     "    Xnorm[:, icol] = # YOUR CODE HERE"
    ]
   },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "#Quick visualize the feature-normalized data\n",
+    "plt.grid(True)\n",
+    "plt.xlim([-5, 5])\n",
+    "plt.hist(Xnorm[:, 0], label='col1')\n",
+    "plt.hist(Xnorm[:, 1], label='col2')\n",
+    "plt.hist(Xnorm[:, 2], label='col3')\n",
+    "plt.title('Feature Normalization Accomplished')\n",
+    "plt.xlabel('Column Value')\n",
+    "plt.ylabel('Counts')\n",
+    "plt.legend()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Previously, you implemented gradient descent on a univariate regression\n",
+    "problem. The only difference now is that there is one more feature in the\n",
+    "matrix X. The hypothesis function and the batch gradient descent update\n",
+    "rule remain unchanged."
+   ]
+  },
