--- a/LinearRegressionHard.ipynb
+++ b/LinearRegressionHard.ipynb
@@ -679,3 +679,39 @@
     "rule remain unchanged."
    ]
   },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true,
+    "scrolled": false
+   },
+   "outputs": [],
+   "source": [
+    "#Run gradient descent with multiple variables, initial theta still set to zeros\n",
+    "#(Note! This doesn't work unless we feature normalize! \"overflow encountered in multiply\")\n",
+    "initial_theta = np.zeros((Xnorm.shape[1], 1))\n",
+    "theta, theta_history, cost_history = descendGradient(Xnorm, y, initial_theta)\n",
+    "\n",
+    "#Plot convergence of cost function:\n",
+    "plotConvergence(cost_history)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "When training Machine Learning models, **it is essential to have a test set that the model does not see in the training process**. That is because we cannot assess model performance from the data that was used to train it -- any such assessment would be misleadingly optimistic, i.e. the model would appear more accurate that it actually would be when the time arrives to predict on unseen data!\n",
+    "\n",
+    "We say that only unseen, or *test data*, can provide an unbiased model performance metric, such as accuracy."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "When normalizing the features, it is important\n",
+    "to store the values used for normalization - the mean value and the standard\n",
+    "deviation used for the computations. After learning the parameters\n",
+    "from the model, we often want to predict the prices of houses we have not\n",
+    "seen before (i.e. the test data). Given a new x value (living room area and number of bedrooms),\n",
