build: Updating mediawiki/mediawiki-phan-config to 0.10.5

--- a/LinearRegressionHard.ipynb
+++ b/LinearRegressionHard.ipynb
@@ -781,3 +781,34 @@
    },
    "outputs": [],
    "source": [
+    "from numpy.linalg import inv\n",
+    "# Implementation of normal equation to find analytic solution to linear regression\n",
+    "\n",
+    "def normEqtn(X, y):\n",
+    "    # YOUR CODE HERE"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "print(\"Normal equation prediction for price of house with 1650 square feet and 3 bedrooms\")\n",
+    "print(\"$%0.2f\" % float(h(normEqtn(X, y), [1, 1650., 3])))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  }
+ ],
+ "metadata": {
+  "kernelspec": {
