intelli_plug: make it gcc-4.6.x eabi compatible :p

--- a/LogisticRegression.ipynb
+++ b/LogisticRegression.ipynb
@@ -136,3 +136,37 @@
        "      <td>3.584741</td>\n",
        "      <td>7.290220</td>\n",
        "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>6.018260</td>\n",
+       "      <td>8.630855</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>7.903274</td>\n",
+       "      <td>7.534438</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Exam1_score  Exam2_score  Admitted\n",
+       "0     3.462366     7.802469         0\n",
+       "1     3.028671     4.389500         0\n",
+       "2     3.584741     7.290220         0\n",
+       "3     6.018260     8.630855         1\n",
+       "4     7.903274     7.534438         1"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data = pd.read_csv('data/exam_data.txt', sep = ',', header=None)\n",
+    "data.columns = ['Exam1_score', 'Exam2_score', 'Admitted']\n",
