--- a/LogisticRegression.ipynb
+++ b/LogisticRegression.ipynb
@@ -197,3 +197,31 @@
       ]
      },
      "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# save the code of plotting into a function for faster plotting later\n",
+    "def plot_data(): \n",
+    "    fig, ax = plt.subplots(1, 1, figsize = [8, 6])\n",
+    "    # draw\n",
+    "    ax.scatter(data.Exam1_score[data.Admitted == 0], data.Exam2_score[data.Admitted == 0], color='#FF5733', marker = 'x',\n",
+    "                            alpha=0.85, label='Not admitted')\n",
+    "    ax.scatter(data.Exam1_score[data.Admitted == 1], data.Exam2_score[data.Admitted == 1], color='#49FF33', marker = 'o',\n",
+    "                            alpha=0.85, label='Admitted')\n",
+    "    ax.set_xlabel('Exam 1 score')\n",
+    "    ax.set_ylabel('Exam 2 score')\n",
+    "    ax.set_title('Scatter plot')\n",
+    "    ax.legend()\n",
+    "    \n",
+    "plot_data()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
