Finish static pages

--- a/LogisticRegression.ipynb
+++ b/LogisticRegression.ipynb
@@ -225,3 +225,32 @@
     {
      "name": "stdout",
      "output_type": "stream",
+     "text": [
+      "Shape of matrix X is (100, 2).\n",
+      "X has 100 samples.\n",
+      "X has 2 features.\n",
+      "Shape of vector y is (100, 1).\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Separating X and y. Just run this cell\n",
+    "X = data[['Exam1_score', 'Exam2_score']].values\n",
+    "y = data['Admitted'].values\n",
+    "\n",
+    "print('Shape of matrix X is {}.'.format(X.shape))\n",
+    "print('X has {} samples.'.format(X.shape[0]))\n",
+    "print('X has {} features.'.format(X.shape[1]))\n",
+    "\n",
+    "y = y.reshape(-1, 1)\n",
+    "\n",
+    "print('Shape of vector y is {}.'.format(y.shape))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Remember from the linreg exercise and the sides, that in order to neatly calculate $\\theta_0$ into $\\theta$, we add a column of 1s to the left of $X$, to be feature $x_0$? We do it with the following code:"
+   ]
+  },
