--- a/LogisticRegression.ipynb
+++ b/LogisticRegression.ipynb
@@ -283,3 +283,40 @@
     "In binary classification, we would like to predict either $0$ or $1$.\n",
     "For this purpose we will design a function $h_{\\theta}(x)$ which will output a number from $0$ to $1$:\n",
     "- if $h_{\\theta}(x) \\geq 0.5$, predict \"$y = 1$\",\n",
+    "- if $h_{\\theta}(x) < 0.5$, predict \"$y = 0$\"."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "*Quick summary of how we will do logistic regression from slides, step by step:*\n",
+    "\n",
+    "- We initialize the parameters ($\\theta$)\n",
+    "\n",
+    "- Use them to calculate the Cost\n",
+    "\n",
+    "- Calculate the gradient\n",
+    " \n",
+    "- Use the gradient to update parameters in order to reduce the cost\n",
+    "\n",
+    "- Keep doing it a lot of times (maybe 10000 times), to obtain the \"optimal\" theta."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 3.1 Sigmoid function\n",
+    "\n",
+    "We first implement the \"sigmoid function\" that we will use later.\n",
+    "It takes in a number and squishes it to be between $0$ and $1$.\n",
+    "The sigmoid function has the following form:\n",
+    "$$ \\mathrm{sigmoid}(z)=\\frac{1}{1+e^{−z}} $$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
