--- a/LogisticRegression.ipynb
+++ b/LogisticRegression.ipynb
@@ -320,3 +320,36 @@
   {
    "cell_type": "code",
    "execution_count": 6,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# finish the following code to finish the sigmoid function. for example, np.exp(2) is the code for e^2\n",
+    "def sigmoid(z):\n",
+    "    return 'write code here'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# Just run this cell after you finish writing the sigmoid fuction above. It will plot the function\n",
+    "z = np.arange(-10, 10, 0.1)\n",
+    "fig, ax = plt.subplots(1, 1)\n",
+    "ax.plot(z, sigmoid(z))\n",
+    "ax.set_xlabel('$z$')\n",
+    "ax.set_ylabel('sigmoid($z$)')\n",
+    "ax.set_title('Sigmoid Function')\n",
+    "ax.grid()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
